--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Douglasfeliphe <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 telebot = "^0.0.4"
+PyDrive = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 
